Arquitectura por capas (bibliotecas de clases)

--- a/Universidad/Views/Estudiantes/Index.cshtml
+++ b/Universidad/Views/Estudiantes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Universidad.Models.Estudiante>
+﻿@model IEnumerable<Models.Estudiante>
 
 @{
     ViewBag.Title = "Estudiantes";
