--- a/Universidad/Views/MateriaEstudiantes/Index.cshtml
+++ b/Universidad/Views/MateriaEstudiantes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Universidad.Models.MateriaEstudiante>
+﻿@model IEnumerable<Models.MateriaEstudiante>
 
 @{
     ViewBag.Title = "Incribir Materias";
