--- a/Universidad/Views/MateriaProfesors/Index.cshtml
+++ b/Universidad/Views/MateriaProfesors/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Universidad.Models.MateriaProfesor>
+﻿@model IEnumerable<Models.MateriaProfesor>
 
 @{
     ViewBag.Title = "Asignación de Profesor";
