--- a/Universidad/Views/MateriaEstudiantes/Create.cshtml
+++ b/Universidad/Views/MateriaEstudiantes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Universidad.Models.MateriaEstudiante
+﻿@model Models.MateriaEstudiante
 
 @{
     ViewBag.Title = "Inscripción de Materias";
